[gd_scene load_steps=13 format=1]

[ext_resource path="res://HUDLayer.gd" type="Script" id=1]
[ext_resource path="res://img/hudredbar.png" type="Texture" id=2]
[ext_resource path="res://img/hudbluebar.png" type="Texture" id=3]
[ext_resource path="res://img/hudgreenbar.png" type="Texture" id=4]
[ext_resource path="res://joystick/AU.png" type="Texture" id=5]
[ext_resource path="res://joystick/AU2.png" type="Texture" id=6]
[ext_resource path="res://joystick/AR.png" type="Texture" id=7]
[ext_resource path="res://joystick/AR2.png" type="Texture" id=8]
[ext_resource path="res://joystick/AD.png" type="Texture" id=9]
[ext_resource path="res://joystick/AD2.png" type="Texture" id=10]
[ext_resource path="res://joystick/AL.png" type="Texture" id=11]
[ext_resource path="res://joystick/AL2.png" type="Texture" id=12]

[node name="HUDLayer" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Panel 3" type="Panel" parent="."]

visibility/self_opacity = 0.2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 140.0
margin/top = 0.0
margin/right = 470.0
margin/bottom = 100.0

[node name="TextureProgress" type="TextureProgress" parent="Panel 3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 5.0
margin/right = 560.0
margin/bottom = 37.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 2 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="TextureProgress1" type="TextureProgress" parent="Panel 3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 35.0
margin/right = 560.0
margin/bottom = 67.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 20.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 3 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="TextureProgress2" type="TextureProgress" parent="Panel 3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 65.0
margin/right = 560.0
margin/bottom = 97.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 60.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 4 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Panel" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 375.0
margin/top = 160.0
margin/right = 625.0
margin/bottom = 460.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 240.0
margin/bottom = 290.0
alignment = 0

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 230.0
margin/bottom = 67.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="Options" type="Button" parent="Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 71.0
margin/right = 230.0
margin/bottom = 138.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="Exit to main menu" type="Button" parent="Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 142.0
margin/right = 230.0
margin/bottom = 209.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit to main menu"
flat = false

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 213.0
margin/right = 230.0
margin/bottom = 280.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="Panel 2" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 375.0
margin/top = 160.0
margin/right = 625.0
margin/bottom = 460.0

[node name="Label" type="Label" parent="Panel 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 17.0
margin/right = 178.0
margin/bottom = 33.0
text = "Some options"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OK" type="Button" parent="Panel 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 260.0
margin/right = 175.0
margin/bottom = 280.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OK"
flat = false

[node name="JoystickPanel" type="Panel" parent="."]

visibility/self_opacity = 0.2
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 140.0
margin/right = 140.0
margin/bottom = 0.0

[node name="ButtonUp" type="TextureButton" parent="JoystickPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ButtonRight" type="TextureButton" parent="JoystickPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 115.0
margin/top = 40.0
margin/right = 143.0
margin/bottom = 95.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ButtonDown" type="TextureButton" parent="JoystickPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 110.0
margin/right = 100.0
margin/bottom = 138.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ButtonLeft" type="TextureButton" parent="JoystickPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 28.0
margin/bottom = 95.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="MainMenuPanel" type="Panel" parent="."]

editor/display_folded = true
visibility/self_opacity = 0.2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 90.0
margin/bottom = 150.0

[node name="Pause" type="Button" parent="MainMenuPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 9.0
margin/right = 61.0
margin/bottom = 29.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pause"
flat = false

[node name="Unpause" type="Button" parent="MainMenuPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 37.0
margin/right = 79.0
margin/bottom = 57.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Unpause"
flat = false

[node name="Menu" type="Button" parent="MainMenuPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 65.0
margin/right = 61.0
margin/bottom = 85.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Menu"
flat = false

[node name="Save" type="Button" parent="MainMenuPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 93.0
margin/right = 52.0
margin/bottom = 113.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="Load" type="Button" parent="MainMenuPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 121.0
margin/right = 53.0
margin/bottom = 141.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="RunButon" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 166.0
margin/right = 85.0
margin/bottom = 186.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RunButton"
flat = false

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/Exit to main menu" to="." method="_on_Exit_to_main_menu_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="Panel 2/OK" to="." method="_on_OK_pressed"]

[connection signal="button_down" from="JoystickPanel/ButtonUp" to="." method="_on_ButtonUp_button_down"]

[connection signal="button_up" from="JoystickPanel/ButtonUp" to="." method="_on_ButtonUp_button_up"]

[connection signal="pressed" from="JoystickPanel/ButtonUp" to="." method="_on_ButtonUp_pressed"]

[connection signal="button_down" from="JoystickPanel/ButtonRight" to="." method="_on_ButtonRight_button_down"]

[connection signal="button_up" from="JoystickPanel/ButtonRight" to="." method="_on_ButtonRight_button_up"]

[connection signal="button_down" from="JoystickPanel/ButtonDown" to="." method="_on_ButtonDown_button_down"]

[connection signal="button_up" from="JoystickPanel/ButtonDown" to="." method="_on_ButtonDown_button_up"]

[connection signal="button_down" from="JoystickPanel/ButtonLeft" to="." method="_on_ButtonLeft_button_down"]

[connection signal="button_up" from="JoystickPanel/ButtonLeft" to="." method="_on_ButtonLeft_button_up"]

[connection signal="pressed" from="MainMenuPanel/Pause" to="." method="_on_Pause_pressed"]

[connection signal="pressed" from="MainMenuPanel/Unpause" to="." method="_on_Unpause_pressed"]

[connection signal="pressed" from="MainMenuPanel/Menu" to="." method="_on_Menu_pressed"]

[connection signal="pressed" from="MainMenuPanel/Save" to="." method="_on_Save_pressed"]

[connection signal="pressed" from="MainMenuPanel/Load" to="." method="_on_Load_pressed"]


